--- a/packages/jest-fixture-injection/package.json
+++ b/packages/jest-fixture-injection/package.json
@@ -41,7 +41,8 @@
   },
   "dependencies": {
     "eslint-plugin-jest": "^22.0.0",
-    "fixture-injection": "^0.1.0"
+    "fixture-injection": "^0.1.0",
+    "node-ipc": "^9.1.1"
   },
   "devDependencies": {
     "eslint": "^5.9.0",
