--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "add:jasmine": "scripty",
     "add:jasmine-example": "scripty",
     "add:jest": "scripty",
-    "add:jest-example": "scripty"
+    "add:jest-example": "scripty",
+    "add:jest-example-cra": "scripty"
   },
   "husky": {
     "hooks": {
@@ -18,6 +19,7 @@
     "silent": true
   },
   "devDependencies": {
+    "eslint": "^5.6.0",
     "husky": "^1.1.4",
     "lerna": "^3.4.3",
     "prettier-eslint-cli": "^4.7.1",
