Add nonuse() and setup test env for fixture-injection pkg

--- a/packages/jasmine-fixture-injection-example/package.json
+++ b/packages/jasmine-fixture-injection-example/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "scripty",
     "test": "scripty",
-    "pre-commit": "lint-staged"
+    "pre-commit": "lint-staged && yarn test"
   },
   "lint-staged": {
     "linters": {
