--- a/packages/fixture-injection/package.json
+++ b/packages/fixture-injection/package.json
@@ -3,7 +3,8 @@
   "description": "A JavaScript test helper to inject fixtures",
   "version": "0.1.0",
   "scripts": {
-    "pre-commit": "lint-staged"
+    "test": "scripty",
+    "pre-commit": "lint-staged && yarn test"
   },
   "lint-staged": {
     "linters": {
@@ -17,6 +18,9 @@
       "*.config.js",
       ".eslintrc.js"
     ]
+  },
+  "scripty": {
+    "silent": true
   },
   "engines": {
     "node": ">=8"
@@ -40,8 +44,11 @@
     "eslint": "^5.9.0",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-jest": "^22.0.0",
     "eslint-plugin-node": "^8.0.0",
+    "jest": "^23.6.0",
     "lint-staged": "^8.0.4",
-    "prettier-eslint-cli": "^4.7.1"
+    "prettier-eslint-cli": "^4.7.1",
+    "scripty": "^1.8.0"
   }
 }
