--- a/packages/jest-fixture-injection-example-cra/package.json
+++ b/packages/jest-fixture-injection-example-cra/package.json
@@ -13,7 +13,7 @@
     "build": "craco build",
     "test": "craco test --env=jest-fixture-injection/jsdom",
     "eject": "react-scripts eject",
-    "pre-commit": "lint-staged"
+    "pre-commit": "lint-staged && yarn test --coverage"
   },
   "lint-staged": {
     "linters": {
