--- a/packages/fixture-injection/package.json
+++ b/packages/fixture-injection/package.json
@@ -38,6 +38,7 @@
   ],
   "dependencies": {
     "es-arguments": "^1.0.2",
+    "graph-data-structure": "^1.8.0",
     "node-ipc": "^9.1.1"
   },
   "devDependencies": {
