Fix Jest jsdom's test.skip() and test.only()

--- a/packages/jest-fixture-injection-example-cra/package.json
+++ b/packages/jest-fixture-injection-example-cra/package.json
@@ -28,6 +28,8 @@
       ".eslintrc.js"
     ]
   },
+  "author": "fixture-injection Development Team",
+  "license": "MIT",
   "engines": {
     "node": ">=8"
   },
