--- a/packages/fixture-injection/package.json
+++ b/packages/fixture-injection/package.json
@@ -4,6 +4,7 @@
   "version": "0.1.0",
   "scripts": {
     "test": "scripty",
+    "test-ci": "scripty",
     "pre-commit": "lint-staged && yarn test"
   },
   "lint-staged": {
@@ -48,6 +49,7 @@
     "eslint-plugin-jest": "^22.0.0",
     "eslint-plugin-node": "^8.0.0",
     "jest": "^23.6.0",
+    "jest-junit": "^5.2.0",
     "lint-staged": "^8.0.4",
     "prettier-eslint-cli": "^4.7.1",
     "scripty": "^1.8.0"
