--- a/packages/jasmine-fixture-injection-example/package.json
+++ b/packages/jasmine-fixture-injection-example/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "scripty",
     "test": "scripty",
+    "test-ci": "scripty",
     "pre-commit": "lint-staged && yarn test"
   },
   "lint-staged": {
@@ -42,6 +43,7 @@
     "jasmine": "^3.3.0",
     "jasmine-console-reporter": "^3.1.0",
     "jasmine-fixture-injection": "^0.1.0",
+    "jasmine-reporters": "^2.3.2",
     "lint-staged": "^8.0.4",
     "prettier-eslint-cli": "^4.7.1",
     "scripty": "^1.8.0"
