--- a/packages/jest-fixture-injection-example-cra/package.json
+++ b/packages/jest-fixture-injection-example-cra/package.json
@@ -12,6 +12,7 @@
     "start": "craco start",
     "build": "craco build",
     "test": "craco test --env=jest-fixture-injection/jsdom",
+    "test-ci": "JEST_JUNIT_OUTPUT=reports/jest/results.xml craco test --coverage --env=jest-fixture-injection/jsdom --ci --reporters=default --reporters=jest-junit --runInBand",
     "eject": "react-scripts eject",
     "pre-commit": "lint-staged && yarn test --coverage"
   },
@@ -44,6 +45,7 @@
   ],
   "devDependencies": {
     "jest-fixture-injection": "^0.1.0",
+    "jest-junit": "^5.2.0",
     "lint-staged": "^8.0.5",
     "prettier-eslint-cli": "^4.7.1"
   }
