--- a/packages/fixture-injection/package.json
+++ b/packages/fixture-injection/package.json
@@ -40,6 +40,7 @@
   "dependencies": {
     "es-arguments": "^1.0.2",
     "graph-data-structure": "^1.8.0",
+    "microtime": "^2.1.8",
     "node-ipc": "^9.1.1"
   },
   "devDependencies": {
