--- a/package.json
+++ b/package.json
@@ -1,5 +1,20 @@
 {
+  "name": "fixture-injection",
+  "description": "A JavaScript test helper to inject fixtures",
   "license": "MIT",
+  "homepage": "https://github.com/yatsu/fixture-injection",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/yatsu/fixture-injection.git"
+  },
+  "bugs": {
+    "url": "https://github.com/yatsu/fixture-injection/issues"
+  },
+  "keywords": [
+    "fixture",
+    "javascript",
+    "test"
+  ],
   "scripts": {
     "lint": "eslint packages/*/*.js",
     "format": "prettier-eslint --write 'packages/*/*.js'",
@@ -26,15 +41,13 @@
   "engines": {
     "node": ">=8"
   },
-  "repository": "https://github.com/yatsu/fixture-injection.git",
-  "author": "fixture-injection Development Team",
-  "license": "MIT",
   "devDependencies": {
-    "eslint": "^5.6.0",
-    "husky": "^1.1.4",
-    "lerna": "^3.4.3",
+    "eslint": "^5.16.0",
+    "husky": "^1.3.1",
+    "lerna": "^3.15.0",
     "lerna-changelog": "^0.8.2",
-    "prettier-eslint-cli": "^4.7.1",
-    "scripty": "^1.8.0"
+    "lerna-update-wizard": "^0.16.0",
+    "prettier-eslint-cli": "^5.0.0",
+    "scripty": "^1.9.1"
   }
 }
