--- a/packages/jest-fixture-injection/package.json
+++ b/packages/jest-fixture-injection/package.json
@@ -1,7 +1,21 @@
 {
   "name": "jest-fixture-injection",
   "description": "fixture-injection helper for Jest",
-  "version": "0.1.3",
+  "version": "0.1.4",
+  "homepage": "https://github.com/yatsu/fixture-injection/packages/jest-fixture-injection",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/yatsu/fixture-injection.git"
+  },
+  "bugs": {
+    "url": "https://github.com/yatsu/fixture-injection/issues"
+  },
+  "keywords": [
+    "fixture",
+    "javascript",
+    "jest",
+    "test"
+  ],
   "scripts": {
     "pre-commit": "lint-staged"
   },
@@ -21,38 +35,22 @@
   "engines": {
     "node": ">=8"
   },
-  "scripty": {
-    "silent": true
-  },
-  "repository": "https://github.com/yatsu/fixture-injection.git",
-  "author": "fixture-injection Development Team",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/yatsu/fixture-injection/issues"
-  },
-  "homepage": "https://github.com/yatsu/fixture-injection/packages/jest-fixture-injection",
-  "keywords": [
-    "test",
-    "fixture",
-    "jest"
-  ],
   "peerDependencies": {
-    "jest": ">=22 <24"
+    "jest": ">=22 <25"
   },
   "dependencies": {
     "eslint-plugin-jest": "^22.0.0",
-    "fixture-injection": "^0.1.3",
+    "fixture-injection": "^0.1.4",
     "node-ipc": "^9.1.1"
   },
   "devDependencies": {
-    "eslint": "^5.9.0",
-    "eslint-config-airbnb-base": "^13.1.0",
-    "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-jasmine": "^2.10.1",
-    "eslint-plugin-node": "^8.0.0",
-    "jest": "^23.6.0",
-    "lint-staged": "^8.0.4",
-    "prettier-eslint-cli": "^4.7.1",
-    "scripty": "^1.8.0"
+    "eslint": "^5.16.0",
+    "eslint-config-airbnb-base": "^13.2.0",
+    "eslint-plugin-import": "^2.18.0",
+    "eslint-plugin-jest": "^22.7.2",
+    "eslint-plugin-node": "^8.0.1",
+    "jest": "24.8.0",
+    "lint-staged": "^9.2.0",
+    "prettier-eslint-cli": "^5.0.0"
   }
 }
