--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ jobs:
   build:
     working_directory: ~/workspace
     docker:
-      - image: circleci/node:8.11.4
+      - image: circleci/node:lts
     steps:
       - checkout
       - restore_cache:
