--- a/packages/jest-fixture-injection-example-cra/package.json
+++ b/packages/jest-fixture-injection-example-cra/package.json
@@ -1,6 +1,6 @@
 {
   "name": "jest-fixture-injection-example-cra",
-  "version": "0.1.4",
+  "version": "0.1.5",
   "license": "MIT",
   "private": true,
   "scripts": {
@@ -9,20 +9,7 @@
     "test": "craco test --env=jest-fixture-injection/jsdom",
     "test-ci": "CI=1 JEST_JUNIT_OUTPUT=reports/jest/results.xml craco test --coverage --env=jest-fixture-injection/jsdom --ci --reporters=default --reporters=jest-junit --runInBand",
     "eject": "react-scripts eject",
-    "pre-commit": "lint-staged && yarn test --coverage"
-  },
-  "lint-staged": {
-    "linters": {
-      "*.js": [
-        "prettier-eslint --write",
-        "eslint",
-        "git add"
-      ]
-    },
-    "ignore": [
-      "*.config.js",
-      ".eslintrc.js"
-    ]
+    "pre-commit": "lint-staged && yarn test-ci"
   },
   "engines": {
     "node": ">=10"
@@ -43,7 +30,7 @@
     "react-scripts": "3.0.1"
   },
   "devDependencies": {
-    "jest-fixture-injection": "^0.1.4",
+    "jest-fixture-injection": "^0.1.5",
     "jest-junit": "^6.4.0",
     "lint-staged": "^9.2.0",
     "prettier-eslint-cli": "^5.0.0"
