--- a/packages/jasmine-fixture-injection/package.json
+++ b/packages/jasmine-fixture-injection/package.json
@@ -18,7 +18,8 @@
     "test"
   ],
   "scripts": {
-    "pre-commit": "lint-staged"
+    "test": "true",
+    "test-ci": "true"
   },
   "engines": {
     "node": ">=10"
