--- a/packages/jasmine-fixture-injection-example/package.json
+++ b/packages/jasmine-fixture-injection-example/package.json
@@ -7,8 +7,7 @@
   "scripts": {
     "start": "scripty",
     "test": "scripty",
-    "test-ci": "scripty",
-    "pre-commit": "scripty"
+    "test-ci": "scripty"
   },
   "private": true,
   "scripty": {
