--- a/packages/jest-fixture-injection-example-react/tsconfig.json
+++ b/packages/jest-fixture-injection-example-react/tsconfig.json
@@ -17,8 +17,7 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "preserve",
-    "types": ["node", "react", "react-dom", "jest-fixture-injection"]
+    "jsx": "react"
   },
   "include": [
     "src"
