--- a/packages/jest-fixture-injection-example/package.json
+++ b/packages/jest-fixture-injection-example/package.json
@@ -23,24 +23,31 @@
     }
   },
   "devDependencies": {
-    "@babel/preset-env": "^7.5.5",
-    "@babel/preset-typescript": "^7.3.3",
+    "@babel/preset-env": "^7.11.0",
+    "@babel/preset-typescript": "^7.10.4",
     "@types/debug": "^4.1.5",
-    "@types/node": "^12.7.1",
+    "@types/node": "^14.0.27",
+    "@typescript-eslint/eslint-plugin": "^3.7.1",
+    "@typescript-eslint/parser": "^3.7.1",
     "debug": "^4.1.1",
+    "eslint": "^7.6.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-config-standard-with-typescript": "^18.0.2",
+    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "^4.0.1",
     "import-sort-cli": "^6.0.0",
     "import-sort-style-module": "^6.0.0",
-    "jest": "24.8.0",
+    "jest": "26.2.2",
     "jest-fixture-injection": "^0.2.0",
-    "jest-junit": "^7.0.0",
-    "lint-staged": "^9.2.1",
-    "prettier": "^1.18.2",
-    "scripty": "^1.9.1",
-    "tslint": "^5.18.0",
-    "tslint-config-prettier": "^1.18.0",
-    "tslint-config-standard": "^8.0.1",
-    "tslint-plugin-prettier": "^2.0.1",
-    "typescript": "^3.5.3",
-    "typescript-tslint-plugin": "^0.5.4"
+    "jest-junit": "^11.1.0",
+    "lint-staged": "^10.2.11",
+    "prettier": "^2.0.5",
+    "scripty": "^2.0.0",
+    "typescript": "^3.9.7",
+    "typescript-eslint-language-service": "^3.0.0",
+    "typescript-estree": "^18.1.0"
   }
 }
