--- a/packages/jest-fixture-injection-example-react/package.json
+++ b/packages/jest-fixture-injection-example-react/package.json
@@ -24,7 +24,9 @@
       "last 1 safari version"
     ]
   },
-  "dependencies": {
+  "devDependencies": {
+    "@babel/preset-env": "^7.11.0",
+    "@babel/preset-typescript": "^7.10.4",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
@@ -32,13 +34,11 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "jest": "^26.0.8",
+    "jest-fixture-injection": "^0.2.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
     "typescript": "~3.7.2"
-  },
-  "devDependencies": {
-    "jest": "^26.0.8",
-    "jest-fixture-injection": "^0.2.0"
   }
 }
