--- a/packages/jest-fixture-injection/package.json
+++ b/packages/jest-fixture-injection/package.json
@@ -42,17 +42,14 @@
     }
   },
   "peerDependencies": {
-    "jest": ">=26 <27"
+    "jest": ">=24 <25"
   },
   "dependencies": {
-    "@babel/core": "^7.11.0",
-    "babel-jest": "^26.2.2",
     "fixture-injection": "^0.2.0",
     "jest-environment-jsdom": "^24.8.0",
     "jest-environment-node": "^24.8.0",
     "node-ipc": "^9.1.1",
-    "pirates": "^4.0.1",
-    "regenerator-runtime": "^0.13.7"
+    "pirates": "^4.0.1"
   },
   "devDependencies": {
     "@types/builtin-modules": "^3.1.1",
