--- a/packages/fixture-injection/package.json
+++ b/packages/fixture-injection/package.json
@@ -50,11 +50,15 @@
   "devDependencies": {
     "@babel/preset-env": "^7.5.5",
     "@babel/preset-typescript": "^7.3.3",
+    "@rollup/plugin-commonjs": "^14.0.0",
+    "@rollup/plugin-json": "^4.1.0",
+    "@rollup/plugin-node-resolve": "^8.4.0",
     "@types/debug": "^4.1.5",
     "@types/jest": "^24.0.17",
     "@types/microtime": "^2.1.0",
     "@types/node": "^12.7.1",
     "@types/node-ipc": "^9.1.1",
+    "@wessberg/rollup-plugin-ts": "^1.3.2",
     "debug": "^4.1.1",
     "import-sort-cli": "^6.0.0",
     "import-sort-style-module": "^6.0.0",
@@ -63,6 +67,9 @@
     "lint-staged": "^9.2.1",
     "prettier": "^1.18.2",
     "rimraf": "^2.6.3",
+    "rollup": "^2.23.1",
+    "rollup-plugin-node-externals": "^2.2.0",
+    "rollup-plugin-sourcemaps": "^0.6.2",
     "scripty": "^1.9.1",
     "tslint": "^5.18.0",
     "tslint-config-prettier": "^1.18.0",
