--- a/packages/jest-fixture-injection/package.json
+++ b/packages/jest-fixture-injection/package.json
@@ -42,37 +42,43 @@
     }
   },
   "peerDependencies": {
-    "jest": ">=24 <25"
+    "jest": ">= 26"
   },
   "dependencies": {
     "fixture-injection": "^0.3.0",
-    "jest-environment-jsdom": "^24.8.0",
-    "jest-environment-node": "^24.8.0",
-    "node-ipc": "^9.1.1",
+    "jest-environment-jsdom": "^26.2.0",
+    "jest-environment-node": "^26.2.0",
     "pirates": "^4.0.1"
   },
   "devDependencies": {
+    "@babel/preset-typescript": "^7.10.4",
+    "@rollup/plugin-commonjs": "^14.0.0",
+    "@rollup/plugin-json": "^4.1.0",
+    "@rollup/plugin-node-resolve": "^8.4.0",
     "@types/builtin-modules": "^3.1.1",
     "@types/debug": "^4.1.5",
-    "@types/jest": "^24.0.17",
-    "@types/jsdom": "^12.2.4",
-    "@types/node": "^12.7.1",
-    "@types/node-ipc": "^9.1.1",
+    "@types/jest": "^26.0.9",
+    "@types/jsdom": "^16.2.3",
+    "@types/node": "^14.0.27",
+    "@wessberg/rollup-plugin-ts": "^1.3.2",
     "debug": "^4.1.1",
     "import-sort-cli": "^6.0.0",
     "import-sort-style-module": "^6.0.0",
-    "jest": "^24.8.0",
-    "jest-config": "^24.8.0",
-    "lint-staged": "^9.2.1",
-    "prettier": "^1.18.2",
-    "rimraf": "^2.6.3",
-    "scripty": "^1.9.1",
-    "tslint": "^5.18.0",
+    "jest": "^26.2.2",
+    "jest-config": "^26.2.2",
+    "lint-staged": "^10.2.11",
+    "prettier": "^2.0.5",
+    "rimraf": "^3.0.2",
+    "rollup": "^2.23.1",
+    "rollup-plugin-multi-input": "^1.1.1",
+    "rollup-plugin-node-externals": "^2.2.0",
+    "rollup-plugin-sourcemaps": "^0.6.2",
+    "scripty": "^2.0.0",
+    "tslint": "^6.1.3",
     "tslint-config-prettier": "^1.18.0",
-    "tslint-config-standard": "^8.0.1",
-    "tslint-plugin-prettier": "^2.0.1",
-    "typescript": "^3.5.3",
-    "typescript-tslint-plugin": "^0.5.4"
-  },
-  "gitHead": "50bed6cd64449d0047f2461560511a53a4236d38"
+    "tslint-config-standard": "^9.0.0",
+    "tslint-plugin-prettier": "^2.3.0",
+    "typescript": "^3.9.7",
+    "typescript-tslint-plugin": "^0.5.5"
+  }
 }
