--- a/packages/jest-fixture-injection/tsconfig.json
+++ b/packages/jest-fixture-injection/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "target": "es2017",
     "module": "commonjs",
-    "lib": ["dom", "es2017"],
+    "lib": ["es2017"],
     "declaration": true,
     "declarationMap": true,
     "strict": true,
@@ -19,11 +19,9 @@
     "inlineSourceMap": true,
     "typeRoots": ["node_modules/@types"],
     "plugins": [{ "name": "typescript-tslint-plugin" }],
-    "types": ["node", "jest"],
     "outDir": "dist",
     "declarationDir": "dist",
     "rootDir": "ts"
   },
-  "include": ["ts/*.ts"],
-  "exclude": ["node_modules"]
+  "include": ["ts/*.ts"]
 }
