fix(core,jasmine,jest): Fix package to include required files

--- a/packages/fixture-injection/package.json
+++ b/packages/fixture-injection/package.json
@@ -19,8 +19,7 @@
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "files": [
-    "dist",
-    "ts"
+    "dist"
   ],
   "scripts": {
     "build": "scripty",
